--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>BICC International Conference 2021</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    ‚<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
       a:link, a:visited
       {
@@ -16,25 +17,27 @@
     </style> 
   </head>
   <body><span style="font-family: Tahoma;"> </span>
-    <table style="width: 1299px; height: 920px;">
-      <tbody>
-        <tr>
-          <td> <img src="file:///C:/Users/klausnitzer/Documents/conflogo2.png"
-
-              alt="BICC Conference Logo 2022" title="BICC Conference Logo 2022"
-
-              style="width: 1003px; height: 170px;"><br>
-            <h1>BICC International Conference 2022</h1>
-            <h3>“Infrastructural power at global frontiers: prospects for
-              conflict and peace”</h3>
+        <div id="header-image">
+          <img 
+            src="thumbnail_conflogo2.png"
+            class="img-fluid"
+            alt="BICC Conference Logo 2022" title="BICC Conference Logo 2022"
+          >
+        </div>
+        <div class="container-fluid text-center" id="intro" >
+            <h1 id="intro-title" class="title page">BICC International Conference 2022</h1>
+            <h3 id="intro-undertitle">“Infrastructural power at global frontiers: prospects for conflict and peace”</h3>
             <p>29 November 2022, online via Zoom</p>
+        </div>      
+        <div>            
+          <p>
             How are we to understand conflicts around infrastructural
             mega-developments in global frontier spaces? Can infrastructures
             forge peace? Large infrastructure corridors integrate ports, roads
             and railways with agricultural lands, energy systems and tourism
             spaces in remote areas. Infrastructural mega-plans like the Chinese
             Belt and Road Initiative are globally discussed, yet their local
-            imprint is often overlooked, and local populations tend to be
+            imprint is often overlooked, and local populationss tend to be
             rendered invisible. Frontier spaces are projected by planners as
             “empty”. Brochures of prospectors and investors do not mention the
             contestations connected to the implementation of such schemes. Grand
@@ -72,52 +75,54 @@
             to discuss the factors that render infrastructural mega-projects
             either drivers of violence and conflicts or facilitators of peace. <br>
             <br>
-            <table style="width: 100%" border="1">
-              <tbody>
-                <tr>
-                  <td>13.45–14.00</td>
-                  <td>Online registration
-                  </td>
-                </tr>
-                <tr>
-                  <td>14.00–14.15</td>
-                  <td>Welcome by Professor Dr Conrad Schetter, Director of BICC
-                    <br>
-                    <br>
-                    Welcome by Minister Ina Brandes, Ministry of Culture and
-                    Science of the German State of North Rhine-Westphalia
-                    (t.b.c.)</td>
-                </tr>
-                <tr>
-                  <td><br>
-                  </td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><br>
-                  </td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><br>
-                  </td>
-                  <td><br>
-                  </td>
-                </tr>
-                <tr>
-                  <td><br>
-                  </td>
-                  <td><br>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <br>
-            <br>
-          </td>
-        </tr>
+          </p>
+              
+              <table style="width: 100%" border="1">
+                <tbody>
+                  <tr>
+                    <td>13.45–14.00</td>
+                    <td>Online registration
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>14.00–14.15</td>
+                    <td>Welcome by Professor Dr Conrad Schetter, Director of BICC
+                      <br>
+                      <br>
+                      Welcome by Minister Ina Brandes, Ministry of Culture and
+                      Science of the German State of North Rhine-Westphalia
+                      (t.b.c.)</td>
+                  </tr>
+                  <tr>
+                    <td><br>
+                    </td>
+                    <td><br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><br>
+                    </td>
+                    <td><br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><br>
+                    </td>
+                    <td><br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><br>
+                    </td>
+                    <td><br>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+              <br>
+              <br>
+        </div>
+        
         <tr>
           <td>
             <ul>
@@ -149,8 +154,7 @@
                 recorded.</sub></p>
           </td>
         </tr>
-      </tbody>
-    </table>
+
     <span style="font-family: Tahoma;"> </span>
   </body>
 </html>
