--- a/index.html
+++ b/index.html
@@ -157,64 +157,69 @@
                     associated with environmental infrastructures (energy projects, dams, conservation)                      
                     <br><br>Breakout group 1: Energy infrastructures: Can renewables break the resource 
                     curse?</b></span>
-                    <br>Chair: <i>Professor Dr Maximilian Mayer, University of Bonn (t.b.c)</i>
+                    <br>Chair: <i>Maurice Döring, BICC</i>
                     <br>Inputs: 
-                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Jana Hönke, University of Bayreuth:</i> Contested 
-                    security arrangements of mega infrastructures in Africa
-                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr. Pascal Abb, Peace Research Institute Frankfurt:</i> The conflict 
-                    impact of current infrastructure initiatives
-                    <br>Rapporteur: <i>Dr. Marc von Boemcken, BICC</i>
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr. Benjamin Schütze, Arnold Bergsträsser Institute (ABI), 
+                    Freiburg (t.b.c.):</i> The political economy of renewable energy 
+                    infrastructures in the MENA region
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University:</i> : Clashing interests: 
+                    Geothermal investments in a pastoralist environment, Kenya 
+                    <br>Rapporteur: <i>Marie Born, BICC</i>
 
-                    <br><br><b>Breakout group 2: National projects and local contestations</b></span>
-                    <br>Chair: <i>Biruk Terrefe, BICC/ University of Oxford</i>
+                    <br><br><b>Breakout group 2: Dams (hydropower and mining)</b></span>
+                    <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn (t.b.c.)</i>
                     <br>Inputs: 
-                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Kennedy Mkutu, United States International 
-                    University, Nairobi:</i>Organized violence in the Lamu Port-South 
-                    Sudan-Transport Corridor (LAPSSET)
-                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Ngala Chome, Durham University (t.b.c.):</i> Dynamics of exclusion 
-                    and inclusion in anticipation of port infrastructures in Lamu, Kenya
-                    <br>Rapporteur: <i> Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i>
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Ian Baird, University of Wisconsin-Madison: </i>Catastrophic and slow violence of a hydropower dam in Laos
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Bruno Milanez, Federal University of Juiz de Fora, Brazil:</i> 
+                    The (il)legal contours of a tailing dam disaster, Brazil
+                    <br>Rapporteur: <i>Dr Birgit Kemmerling, BICC</i>
+
+                    <br><br><b>Breakout group 3: Conservancies</b></span>
+                    <br>Chair: <i>Prof. Michael Bollig, University of Cologne (t.b.c.)</i>
+                    <br>Inputs: 
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Bram Büscher, University of Wageningen:</i>Hydrocarbon infrastructures of conservation, South Africa, and the 
+                    potentials for “convivial conservation” 
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Johannes Dittmann, University of Bonn:</i> 
+                    The contested translation of a transboundary conservation project (KAZA, Namibia)
+                    <br>Rapporteur: <i>Nikhil Acharya, BICC</i>
                   </td>
                 </tr>
                 <tr>
                   <td>17.20-17.30
                   </td>
-                  <td><br>
+                  <td>Short break
                   </td>
                 </tr>
                 <tr>
                   <td>17.30-17.55 
                   </td>
-                  <td><br>
+                  <td><b>5-minute presentations from each session</b>
                   </td>
                 </tr>
                 <tr>
                   <td>17.55-18.45
                   </td>
-                  <td><br>
+                  <td>
+                    <span></span><b>Final Session: Prospects for peace? Implications for practitioners 
+                    and policymakers</b></span>
+                    <br>Moderator: <i>Evelyne Owino</i>
+                    <br>Panelists: 
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Linda Poppe, Director Survival International Germany</i>
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Conrad Schetter, BICC</i>
+                    <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Representative of World Bank (t.b.c.)</i> 
+                    <br><br>Plenary discussion
+                    <br>Reflection by the conference team
+                    <br>End of conference
                   </td>
                 </tr>
               </tbody>
             </table>
           </div>
         </div>
-        <div>
-            <ul>
-              <li>
-                <a 
-                  href="https://conference.bicc.de/BICC_International_Conference_Outline_and_tentative_programme.pdf"
-                  title="Conference programme" target="_blank">Conferenceprogramme
-                </a> | PDF
-              </li>
-              <li>
-                <a href="CVs.pdf" title="CVs" target="_blank">Panellists‘ CVs</a>| PDF
-              </li>
-            </ul>
-        </div>
         <div class="d-grid gap-2" id="footer">
           <div class="p-2">
-            Link to the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yqoEfWS85k27dU5LZDMNPlqXdzsHaZBGoxOV7BFf3IlUN1FZQ01BRkwxQU40R0M0TlYwWlU2S080MSQlQCN0PWcu">Registration Form</a> 
-            or scan this QR Code <img id="QR-Code"src="QRCodeConference2022.png" class="rounded mx-auto" alt="QRCode">
+            Link to the <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yqoEfWS85k27dU5LZDMNPlqXdzsHaZBGoxOV7BFf3IlUN1FZQ01BRkwxQU40R0M0TlYwWlU2S080MSQlQCN0PWcu" class="btn" id="button" role="button">Registration Form</a> 
+            or scan this <span style="color:#E54919;">QR Code</span>&nbsp;&nbsp;<img id="QR-Code"src="QRCodeConference2022.png" class="rounded mx-auto" alt="QRCode">
 
           </div>
           <div class="p-2">
