--- a/index.html
+++ b/index.html
@@ -19,65 +19,34 @@
     </style>
   </head>
   <body>
-    <table style="width: 1450px; height: 204px;" border="0">
-      <tbody>
-        <tr>
-          <td style="padding-left:20px" =""=""><img src="KVL.png" alt="conference logo"
-
-              title="conference logo"><br>
-          </td>
-          <td>
-            <h1 id="intro-title" class="title page" style="box-sizing: border-box; font-family: Tahoma; margin-top: 0px; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; font-size: 2.5rem; color: #4f6267; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: white; text-decoration-style: initial; text-decoration-color: initial; text-align: left;">BICC
-              International Conference 2022</h1>
-            <h3 id="intro-undertitle" style="box-sizing: border-box; font-family: Tahoma; margin-top: 0px; margin-bottom: 0.5rem; font-weight: 500; line-height: 1.2; font-size: 1.75rem; font-style: italic; color: #4f6267; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; text-indent: 0px; text-transform: none; white-space: normal; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: white; text-decoration-style: initial; text-decoration-color: initial; text-align: left;">Infrastructural
-              power at global frontiers: prospects for conflict and peace</h3>
-            <h6>29 November 2022, online via Zoom</h6>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="banner mt-3">
+      <div class="d-flex mb-1">
+        <div class="p-1">
+          <img src="KVL.png" alt="conference logo" title="conference logo">
+        </div>
+        <div class="p-5 flex-grow-1">
+          <h1 id="intro-title" class="title page">BICC International Conference 2022</h1>
+          <h3 id="intro-undertitle">"Infrastructural Power at Global Frontiers: Prospects for Conflict and Peace"</h3>
+          <h6>29 November 2022, online via Zoom</h6>
+        </div>
+      </div>
+    </div>
     <div class="d-grid gap-2" id="info">
-      <div class="p-1"> How are we to understand conflicts around
-        infrastructural mega-developments in global frontier spaces? Can
-        infrastructures forge peace? Large infrastructure corridors integrate
-        ports, roads and railways with agricultural lands, energy systems and
-        tourism spaces in remote areas. Infrastructural mega-plans like the
-        Chinese Belt and Road Initiative are globally discussed, yet their local
-        imprint is often overlooked, and local populationss tend to be rendered
-        invisible. Frontier spaces are projected by planners as “empty”.
-        Brochures of prospectors and investors do not mention the contestations
-        connected to the implementation of such schemes. Grand projects stir
-        high hopes and deep-seated fears among the residents in the
-        infrastructure corridors. </div>
-      <div class="p-1"> On the one hand, entire communities may hope for social
-        betterment - formal employment and service contracts, local value
-        addition and ready markets for local products. Indeed, these projects
-        arguably harness a potential for facilitating local development and
-        peace. In some cases, local agents may well succeed to affect positive
-        changes in the planning processes. On the other hand, local livelihoods
-        may be threatened. Pastoralists, hunter-gatherers and fisherfolk may
-        lose grazing, hunting and fishing grounds, small-scale farmers their
-        access to arable land, without receiving adequate compensation for
-        losses. Social dislocations, exclusions, and dispossessions from land
-        lead some to stress colonial continuities. Legal frameworks to be
-        applied may be inadequate, contradictory or circumvented. In
-        addition,prospects of large-scale development in historically
-        marginalised areas may stimulate demands for political recognition.
-        Infrastructure schemes may come with multiple forms of violence,from
-        discursive, psychological violence to organized violence in the form of
-        security operators, and they may meet with armed violence in areas that
-        have been fraud with conflict in the past. </div>
-      <div class="p-1"> The BICC Annual Conference 2022 gathers experts from the
-        social sciences and practitioners from development, environment, and
-        peace organizations to focus on different types of large scale
-        infrastructural projects in various frontier spaces around the world.
-        This includes, for example, the China-Pakistan Economic Corridor (CPEC)
-        as well as the Lamu Port- South Sudan Ethiopia- Transport Corridor
-        (LAPSSET) in East Africa. </div>
-      <div class="p-1"> The conference presents and compares findings from
-        different cases to discuss the factors that render infrastructural
-        mega-projects either drivers of violence and conflicts or facilitators
-        of peace. </div>
+      <div class="p-1"> How are we to understand conflicts around infrastructural mega-developments in global frontier spaces? Can infrastructures forge peace? Large infrastructure corridors integrate
+        ports, roads and railways with agricultural lands, energy systems and tourism spaces in remote areas. Infrastructural mega-plans like the Chinese Belt and Road Initiative are globally discussed, yet their local
+        imprint is often overlooked, and local populationss tend to be rendered invisible. Frontier spaces are projected by planners as “empty”. Brochures of prospectors and investors do not mention the contestations
+        connected to the implementation of such schemes. Grand projects stir high hopes and deep-seated fears among the residents in the infrastructure corridors. </div>
+      <div class="p-1"> On the one hand, entire communities may hope for social betterment - formal employment and service contracts, local value addition and ready markets for local products. Indeed, these projects
+        arguably harness a potential for facilitating local development and peace. In some cases, local agents may well succeed to affect positive changes in the planning processes. On the other hand, local livelihoods
+        may be threatened. Pastoralists, hunter-gatherers and fisherfolk may lose grazing, hunting and fishing grounds, small-scale farmers their access to arable land, without receiving adequate compensation for
+        losses. Social dislocations, exclusions, and dispossessions from land lead some to stress colonial continuities. Legal frameworks to be applied may be inadequate, contradictory or circumvented. In
+        addition,prospects of large-scale development in historically marginalised areas may stimulate demands for political recognition. Infrastructure schemes may come with multiple forms of violence,from
+        discursive, psychological violence to organized violence in the form of security operators, and they may meet with armed violence in areas that have been fraud with conflict in the past. </div>
+      <div class="p-1"> The BICC Annual Conference 2022 gathers experts from the social sciences and practitioners from development, environment, and
+        peace organizations to focus on different types of large scale infrastructural projects in various frontier spaces around the world.
+        This includes, for example, the China-Pakistan Economic Corridor (CPEC) as well as the Lamu Port- South Sudan Ethiopia- Transport Corridor (LAPSSET) in East Africa. </div>
+      <div class="p-1"> The conference presents and compares findings from different cases to discuss the factors that render infrastructural
+        mega-projects either drivers of violence and conflicts or facilitators of peace. </div>
       <div class="">
         <h5 id="timeline-title">Preliminary Conference Programme</h5>
         <table class="table table-striped">
