--- a/index.html
+++ b/index.html
@@ -64,27 +64,27 @@
               <td>14.30–15.00 </td>
               <td> 
                 <span><b>Keynote Speech and Plenary Discussion</b></span> 
-                <br><i>Dr Charis Enns, The University of Manchester</i>: The coloniality of mega infrastructures at global frontiers and its consequences for dynamics of peace and Conflict </td>
+                <br><i>Dr Charis Enns, The University of Manchester</i>: The Coloniality of Mega Infrastructures at Global Frontiers and its Consequences for Dynamics of Peace and Conflict </td>
             </tr>
             <tr>
               <td>15.00–16.00 </td>
               <td>
                 <span>
-                  <b>First session (two breakout groups): Conflict Dynamics in Development Corridors<br>
+                  <b>First Session (two breakout groups): Conflict Dynamics in Development Corridors<br>
                   <br>Breakout Group 1: Interests of International Investors in Mega Infrastructures and Conflict Dynamics</b>
                 </span> 
-                <br>Chair: <i>Professor Dr Maximilian Mayer (t.b.c)</i> 
+                <br>Chair: <i>Professor Dr Katja Mielke (t.b.c)</i> 
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Jana Hönke, University of Bayreuth:</i> Contested security arrangements of mega infrastructures in Africa 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr. Pascal Abb, Peace Research Institute Frankfurt:</i> The conflict impact of current infrastructure initiatives 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Jana Hönke, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Pascal Abb, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
                 <br>Rapporteur: <i>Dr. Marc von Boemcken, BICC</i> <br>
                 <br>
-                <b>Breakout group 2: National projects and local contestations</b>
+                <b>Breakout Group 2: National Projects and Local Contestations</b>
                 <br>Chair: <i>Biruk Terrefe, BICC/ University of Oxford</i>
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Kennedy Mkutu, United States International University, Nairobi:</i>Organized violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Ngala Chome, Durham University(t.b.c.):</i> Dynamics of exclusion and inclusion inanticipation of port infrastructures in Lamu, Kenya 
-                <br>Rapporteur: <i> Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i> 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Kennedy Mkutu, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Gediminas Lesutis, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
+                <br>Rapporteur: <i>Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i> 
               </td>
             </tr>
             <tr>
@@ -95,27 +95,27 @@
               <td>16.20–17.20 </td>
               <td> 
                 <span>
-                  <b>Second session (three breakout groups): Overcomingviolence associated with environmental infrastructures(energy projects, dams, conservation) <br>
-                  <br>Breakout group 1: Energy infrastructures: Can renewables break the resource curse?</b>
+                  <b>Second Session (three breakout groups): Overcoming Violence Associated with Environmental Infrastructures(Energy projects, Dams, conservation) <br>
+                  <br>Breakout Group 1: Energy Infrastructures: Can Renewables Break the Resource Curse?</b>
                 </span> 
                   <br>Chair: <i>Maurice Döring, BICC</i> 
                   <br>Inputs: 
-                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr. Benjamin Schütze, Arnold Bergsträsser Institute (ABI), Freiburg (t.b.c.):</i> The political economy of renewable energy infrastructures in the MENA region 
-                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University:</i> : Clashing interests: Geothermal investments in a pastoralist environment, Kenya 
-                  <br> Rapporteur: <i>Marie Born, BICC</i> <br>
+                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Benjamin Schütze, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
+                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University: </i>: Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
+                  <br> Rapporteur: <i>Lena Guesnet, BICC</i> <br>
                 <br>
-                <b>Breakout group 2: Dams (hydropower and mining)</b> 
+                <b>Breakout group 2: Dams-The Violence Inherent in Disasters</b> 
                 <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn (t.b.c.)</i> 
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Ian Baird, University of Wisconsin-Madison: </i>Catastrophic and slow violence of a hydropower dam in Laos 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Bruno Milanez, Federal University of Juiz de Fora, Brazil:</i> The (il)legal contours of a tailing dam disaster, Brazil 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Ian Baird, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Bruno Milanez, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
                 <br>Rapporteur: <i>Dr Birgit Kemmerling, BICC</i> <br>
                 <br>
-                <b>Breakout group 3: Conservancies</b> 
+                <b>Breakout group 3: Conservation Infrastructures—(How) Can They Contribute to Peace?</b> 
                 <br>Chair: <i>Prof. Michael Bollig, University of Cologne (t.b.c.)</i>
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Bram Büscher, University of Wageningen:</i>Hydrocarbon infrastructures of conservation, South Africa, and the potentials for “convivial conservation” 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Johannes Dittmann, University of Bonn:</i> The contested translation of a transboundary conservation project (KAZA, Namibia) 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Bram Büscher, University of Wageningen: </i>Hydro-Carbon Infrastructures of Conservation, South Africa, and the Potentials for “Convivial Conservation”  
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Johannes Dittmann, University of Bonn: </i>The Contested Translation of a Transboundary Conservation Project (KAZA, Namibia) 
                 <br>Rapporteur: <i>Nikhil Acharya, BICC</i> 
               </td>
             </tr>
@@ -125,20 +125,20 @@
             </tr>
             <tr>
               <td>17.30-17.55 </td>
-              <td><b>5-minute presentations from each session</b> </td>
+              <td><b>5-minute Presentations from Each Session</b> </td>
             </tr>
             <tr>
               <td>17.55-18.45 </td>
               <td> 
-                <b>Final Session: Prospects for peace? Implications for practitioners and policymakers</b> 
-                <br>Moderator: <i>Evelyne Owino</i>
-                <br>Panelists: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Linda Poppe, Director Survival International Germany</i> 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Conrad Schetter, BICC</i>
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Representative of World Bank (t.b.c.)</i> <br>
-                <br>Plenary discussion 
-                <br>Reflection by the conference team 
-                <br>End of conference 
+                <b>Final Session: Prospects for Peace? Implications for Practitioners and Policymakers </b> 
+                <br>Moderator: <i>Evelyne Owino, BICC</i>
+                <br>Panellists: 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Lufeyo Banda, African Development Bank (t.b.c.)</i> 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Linda Poppe, Director Survival International Germany</i>
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Conrad Schetter, BICC</i><br>
+                <br>Plenary Discussion  
+                <br>Reflection by the Conference Team  
+                <br>End of Conference 
               </td>
             </tr>
           </tbody>
