--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>BICC International Conference 2022</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-
-      rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
       a:link, a:visited
@@ -19,6 +17,7 @@
     </style>
   </head>
   <body>
+    <!-- Banner -->
     <div class="banner mt-3">
       <div class="d-flex mb-1">
         <div class="p-1">
@@ -145,6 +144,7 @@
         </table>
       </div>
     </div>
+    <!-- Footer -->
     <div class="d-grid gap-2" id="footer">
       <div class="p-2"> Link to the 
         <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yqoEfWS85k27dU5LZDMNPlqXdzsHaZBGoxOV7BFf3IlUN1FZQ01BRkwxQU40R0M0TlYwWlU2S080MSQlQCN0PWcu" class="btn" id="button" role="button">Registration Form</a> 
