done with external speakers

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             </tr>
             <tr>
               <td>14.00–14.15</td>
-              <td>Welcome by <i>Professor Dr Conrad Schetter</i>, Director of BICC <br></td>
+              <td>Welcome by <i><a href="https://www.bicc.de/about/staff/staffmember/member/330-schetter/" target="_blank">Professor Dr Conrad Schetter</a></i>, Director of BICC <br></td>
             </tr>
             <tr>
               <td>14.15–14.30 </td>
-              <td>Introduction to the conference: <i>Nadia Ali, Marie Müller-Koné, Evelyne Owino</i> (conference team BICC)</td>
+              <td>Introduction to the conference: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/899-ali/">Nadia Ali</a>, Marie Müller-Koné, Evelyne Owino</i> (conference team BICC)</td>
             </tr>
             <tr>
               <td>14.30–15.00 </td>
@@ -133,8 +133,8 @@
                 <br>Moderator: <i>Evelyne Owino, BICC</i>
                 <br>Panellists: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Lufeyo Banda, African Development Bank (t.b.c.)</i> 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Linda Poppe, Director Survival International Germany</i>
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Conrad Schetter, BICC</i><br>
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#LindaPoppe" target="_blank">Linda Poppe</a>, Director Survival International Germany</i>
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="https://www.bicc.de/about/staff/staffmember/member/330-schetter/" target="_blank">Professor Dr Conrad Schetter</a>, BICC</i><br>
                 <br>Plenary Discussion  
                 <br>Reflection by the Conference Team  
                 <br>End of Conference 
