--- a/speakers.html
+++ b/speakers.html
@@ -62,7 +62,7 @@
             </ul>
         </div>
         <div>
-            <p class="name">Linda Poppe</p>
+            <p class="name" id="LindaPoppe">Linda Poppe</p>
             <p>Linda Poppe is political scientist and Director of the Berlin office of Survival International, the global movement for indigenous peoples. Survival's work for the rights of Indigenous peoples has been recognised with, among others, the Right Livelihood Award. Linda Poppe is part of Survival's campaign to decolonise conservation.</p>
         </div>
         <div>
