done adding all the hyperlinks

--- a/speakers.html
+++ b/speakers.html
@@ -32,9 +32,9 @@
     </div>
     <!-- list speakers -->
     <div class="d-grid gap-2" id="info">
-    <h3 class="name">List of External Speakers</h3>
-        <div class="">
-            <p class="name">Bruno Milanez, Ph.D. in Environmental Policy from Lincoln University, New Zealand.</p>
+    <h3 class="name">Speakers</h3>
+        <div class="mb-5">
+            <p class="name" id="Bruno">Bruno Milanez, Ph.D. in Environmental Policy from Lincoln University, New Zealand.</p>
             <ul class="list-unstyled">
                 <li>Associate Professor at the Department of Industrial and Mechanical Engineering and the Graduate Programme in Geography at the Federal University of Juiz de Fora (Brazil). He coordinates the Politics, Economy, Mining, Environment, and Society Research Group (PoEMAS). His research interests include corporate strategies, mining legislation, and the relationship between mining corporations and the government.  
                     <br>Selected recent publications: 
@@ -45,12 +45,12 @@
                 </li>
             </ul>
         </div>
-        <div>
-            <p class="name">Johannes Dittmann</p>
+        <div class="mt-5 mb-5">
+            <p class="name" id="Johannes">Johannes Dittmann</p>
             <p>Johannes Dittmann is a lecturer and PhD Candidate at the University of Bonn (Department of Geography) and associated member of the Collaborative Research Centre (CRC-TRR 228) “Future Rural Africa – Future-Making and Socio-Ecological Transformation. His key interests lie in development geography and political ecology of Eastern and Southern Africa. His current research focuses on social-ecological transformation in context of large-scale conservation and agricultural schemes in Kenya, Tanzania and Namibia. </p> 
         </div>
-        <div>
-            <p class="name">Kennedy Mkutu Agade </p>
+        <div class="mt-5 mb-5">
+            <p class="name" id="Kennedy">Kennedy Mkutu Agade</p>
             <ul class="list-unstyled">
                 <li>Kennedy Mkutu Agade is a Professor in International Relations at the United States International University-Africa, Nairobi, Kenya and the author of several books and papers in the areas of conflict, pastoralism, armed groups, and infrastructural development and the extractive industry in pastoral areas of East Africa. He is a consultant on conflict sensitivity for the World Bank in Kenya. His current research on “Violent Futures” is part of the research consortium CRC 228 “Future Rural Africa. Future-Making and Social-Ecological Transformation” run by the Universities of Bonn and Cologne, Germany, in collaboration with several universities in Kenya, Tanzania and Namibia. 
                     <br>Selected recent publications:  
@@ -61,16 +61,16 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="mt-5 mb-5">
             <p class="name" id="LindaPoppe">Linda Poppe</p>
             <p>Linda Poppe is political scientist and Director of the Berlin office of Survival International, the global movement for indigenous peoples. Survival's work for the rights of Indigenous peoples has been recognised with, among others, the Right Livelihood Award. Linda Poppe is part of Survival's campaign to decolonise conservation.</p>
         </div>
-        <div>
-            <p class="name">Pascal Abb</p>
+        <div class="mt-5 mb-5">
+            <p class="name" id="Pascal">Pascal Abb</p>
             <p>Pascal Abb is a senior researcher in PRIF’s Research Department on Intrastate Conflict, focusing on how a rising China interacts with global conflict environments. He is currently conducting a research project on the impact of the Belt and Road Initiative on fragile and conflict-affected states. His recent publications on the subject include “All geopolitics is local: the China-Pakistan Economic Corridor amidst overlapping center-periphery relations” (forthcoming in Third World Quarterly), and <a href="https://www.hsfk.de/en/publications/publication-search/publication/road-to-peace-or-bone-of-contention">“Road to Peace or Bone of Contention? The Impact of the Belt and Road Initiative on Conflict States”</a> (with Robert Swaine and Ilya Jones, PRIF Report 1/2021). </p>
         </div>
-        <div>
-            <p class="name">Bram Büscher</p>
+        <div class="mt-5 mb-5">
+            <p class="name" id="BramBüscher">Bram Büscher</p>
             <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com.">www.brambuscher.com.</a></p>
         </div>
     </div>
