--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </tr>
             <tr>
               <td>14.15–14.30 </td>
-              <td>Introduction to the conference: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/899-ali/">Nadia Ali</a>, Marie Müller-Koné, Evelyne Owino</i> (conference team BICC)</td>
+              <td>Introduction to the conference: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/899-ali/" target="_blank">Nadia Ali</a>, <a href="https://www.bicc.de/about/staff/staffmember/member/34-mueller-kone/" target="_blank">Marie Müller-Koné</a>, <a href="https://www.bicc.de/de/about/staff/staffmember/member/1013-owino/" target="_blank">Evelyne Owino</a></i> (conference team BICC)</td>
             </tr>
             <tr>
               <td>14.30–15.00 </td>
@@ -72,16 +72,16 @@
                   <b>First Session (two breakout groups): Conflict Dynamics in Development Corridors<br>
                   <br>Breakout Group 1: Interests of International Investors in Mega Infrastructures and Conflict Dynamics</b>
                 </span> 
-                <br>Chair: <i>Professor Dr Katja Mielke (t.b.c)</i> 
+                <br>Chair: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/352-mielke/" target="_blank">Professor Dr Katja Mielke</a> (t.b.c)</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Jana Hönke, University of Bayreuth:</i> Contested Security Arrangements of Mega Infrastructures in Africa 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Pascal Abb, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
-                <br>Rapporteur: <i>Dr. Marc von Boemcken, BICC</i> <br>
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Pascal" target="_blank">Dr Pascal Abb</a>, Peace Research Institute Frankfurt:</i> The Conflict Impact of Current Infrastructure Initiatives 
+                <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/16-von-boemcken/" target="_blank">Dr. Marc von Boemcken</a>, BICC</i> <br>
                 <br>
                 <b>Breakout Group 2: National Projects and Local Contestations</b>
                 <br>Chair: <i>Biruk Terrefe, BICC/ University of Oxford</i>
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Kennedy Mkutu, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy">Dr Kennedy Mkutu</a>, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Gediminas Lesutis, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
                 <br>Rapporteur: <i>Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i> 
               </td>
@@ -97,25 +97,25 @@
                   <b>Second Session (three breakout groups): Overcoming Violence Associated with Environmental Infrastructures(Energy projects, Dams, conservation) <br>
                   <br>Breakout Group 1: Energy Infrastructures: Can Renewables Break the Resource Curse?</b>
                 </span> 
-                  <br>Chair: <i>Maurice Döring, BICC</i> 
+                  <br>Chair: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/465-doering/" target="_blank">Maurice Döring</a>, BICC</i> 
                   <br>Inputs: 
                   <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Benjamin Schütze, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
                   <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University: </i>: Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
-                  <br> Rapporteur: <i>Lena Guesnet, BICC</i> <br>
+                  <br> Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/23-guesnet/" target="_blank">Lena Guesnet</a>, BICC</i> <br>
                 <br>
                 <b>Breakout group 2: Dams-The Violence Inherent in Disasters</b> 
                 <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn (t.b.c.)</i> 
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Ian Baird, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Bruno Milanez, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
-                <br>Rapporteur: <i>Dr Birgit Kemmerling, BICC</i> <br>
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Bruno" target="_blank">Professor Dr Bruno Milanez</a>, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
+                <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/723-kemmerling/" target="_blank">Birgit Kemmerling</a>, BICC</i> <br>
                 <br>
                 <b>Breakout group 3: Conservation Infrastructures—(How) Can They Contribute to Peace?</b> 
                 <br>Chair: <i>Prof. Michael Bollig, University of Cologne (t.b.c.)</i>
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Bram Büscher, University of Wageningen: </i>Hydro-Carbon Infrastructures of Conservation, South Africa, and the Potentials for “Convivial Conservation”  
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Johannes Dittmann, University of Bonn: </i>The Contested Translation of a Transboundary Conservation Project (KAZA, Namibia) 
-                <br>Rapporteur: <i>Nikhil Acharya, BICC</i> 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#BramBüscher" target="_blank">Bram Büscher</a>, University of Wageningen: </i>Hydro-Carbon Infrastructures of Conservation, South Africa, and the Potentials for “Convivial Conservation”  
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Johannes" target="_blank">Johannes Dittmann</a>, University of Bonn: </i>The Contested Translation of a Transboundary Conservation Project (KAZA, Namibia) 
+                <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/346-acharya/" target="_blank">Acharya Nikhil</a>, BICC</i> 
               </td>
             </tr>
             <tr>
@@ -130,7 +130,7 @@
               <td>17.55-18.45 </td>
               <td> 
                 <b>Final Session: Prospects for Peace? Implications for Practitioners and Policymakers </b> 
-                <br>Moderator: <i>Evelyne Owino, BICC</i>
+                <br>Moderator: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/1013-owino/" target="_blank">Evelyne Owino</a>, BICC</i>
                 <br>Panellists: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Lufeyo Banda, African Development Bank (t.b.c.)</i> 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#LindaPoppe" target="_blank">Linda Poppe</a>, Director Survival International Germany</i>
