--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <b>Breakout Group 2: National Projects and Local Contestations</b>
                 <br>Chair: <i>Biruk Terrefe, BICC/ University of Oxford</i>
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy">Dr Kennedy Mkutu</a>, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy" target="_blank">Dr Kennedy Mkutu</a>, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Gediminas Lesutis, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
                 <br>Rapporteur: <i>Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i> 
               </td>
