--- a/speakers.html
+++ b/speakers.html
@@ -62,12 +62,24 @@
             </ul>
         </div>
         <div class="mt-5 mb-5">
+          <p class="name" id="Lesutis">Gediminas Lesutis</p>
+          <ul class="list-unstyled">
+              <li>Gediminas Lesutis is a Marie Curie Fellow in the Department of Human Geography, Planning and International Development, at the University of Amsterdam, the Netherlands. Website: <a href="www.gediminaslesutis.com">www.gediminaslesutis.com</a>. His research is at the intersection of global politics, human geography, and critical theory, with a specific focus on politics of infrastructure, precarity, extractivism, and contemporary capitalist development across South and East Africa. His first monograph, The Politics of Precarity: Spaces of Extractivism, Violence, and Suffering, was published in 2022 with Routledge Interventions.  
+                  <br>Selected recent publications:  
+                  <ul>
+                    <li>Lesutis, G. 2022. Disquieting ambivalence of mega-infrastructures: Kenya’s Standard Gauge Railway as spectacle and ruination. Environment and Planning D: Society and Space, Accepted. https://doi.org/10.1177/02637758221125475</li>
+                    <li>Lesutis, G. 2022. Politics of disavowal: megaprojects, infrastructural biopolitcs, disavowed subjects. The Annals of the American Association of Geographers. Accepted. https://doi.org/10.1080/24694452.2022.2062292</li>
+                  </ul>
+              </li>
+          </ul>
+      </div>
+        <div class="mt-5 mb-5">
             <p class="name" id="LindaPoppe">Linda Poppe</p>
             <p>Linda Poppe is political scientist and Director of the Berlin office of Survival International, the global movement for indigenous peoples. Survival's work for the rights of Indigenous peoples has been recognised with, among others, the Right Livelihood Award. Linda Poppe is part of Survival's campaign to decolonise conservation.</p>
         </div>
         <div class="mt-5 mb-5">
             <p class="name" id="Pascal">Pascal Abb</p>
-            <p>Pascal Abb is a senior researcher in PRIF’s Research Department on Intrastate Conflict, focusing on how a rising China interacts with global conflict environments. He is currently conducting a research project on the impact of the Belt and Road Initiative on fragile and conflict-affected states. His recent publications on the subject include “All geopolitics is local: the China-Pakistan Economic Corridor amidst overlapping center-periphery relations” (forthcoming in Third World Quarterly), and <a href="https://www.hsfk.de/en/publications/publication-search/publication/road-to-peace-or-bone-of-contention">“Road to Peace or Bone of Contention? The Impact of the Belt and Road Initiative on Conflict States”</a> (with Robert Swaine and Ilya Jones, PRIF Report 1/2021). </p>
+            <p>Pascal Abb is a senior researcher in PRIF's Research Department on Intrastate Conflict, focusing on how a rising China interacts with global conflict environments. He is currently conducting a research project on the impact of the Belt and Road Initiative on fragile and conflict-affected states. His recent publications on the subject include “All geopolitics is local: the China-Pakistan Economic Corridor amidst overlapping center-periphery relations” (forthcoming in Third World Quarterly), and <a href="https://www.hsfk.de/en/publications/publication-search/publication/road-to-peace-or-bone-of-contention">“Road to Peace or Bone of Contention? The Impact of the Belt and Road Initiative on Conflict States”</a> (with Robert Swaine and Ilya Jones, PRIF Report 1/2021). </p>
         </div>
         <div class="mt-5 mb-5">
             <p class="name" id="BramBüscher">Bram Büscher</p>
