add another speaker

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <br>Chair: <i>Biruk Terrefe, BICC/ University of Oxford</i>
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy" target="_blank">Dr Kennedy Mkutu</a>, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Gediminas Lesutis, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Lesutis" target="_blank">Dr Gediminas Lesutis</a>, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
                 <br>Rapporteur: <i>Kadarah Swaleh, Leibniz-Zentrum Moderner Orient (ZMO)</i> 
               </td>
             </tr>
@@ -99,7 +99,7 @@
                 </span> 
                   <br>Chair: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/465-doering/" target="_blank">Maurice Döring</a>, BICC</i> 
                   <br>Inputs: 
-                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Benjamin Schütze, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
+                  <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Benjamin" target="_blank">Dr Benjamin Schütze</a>, Arnold Bergsträsser Institute (ABI), Freiburg:</i> The Political Economy of Renewable Energy Infrastructures in the MENA Region 
                   <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Dr Daniel Salau Rogei, Carleton University: </i>: Clashing Interests: Geothermal Investments in a Pastoralist Environment, Kenya 
                   <br> Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/23-guesnet/" target="_blank">Lena Guesnet</a>, BICC</i> <br>
                 <br>
