--- a/speakers.html
+++ b/speakers.html
@@ -72,7 +72,7 @@
                   </ul>
               </li>
           </ul>
-      </div>
+        </div>
         <div class="mt-5 mb-5">
             <p class="name" id="LindaPoppe">Linda Poppe</p>
             <p>Linda Poppe is political scientist and Director of the Berlin office of Survival International, the global movement for indigenous peoples. Survival's work for the rights of Indigenous peoples has been recognised with, among others, the Right Livelihood Award. Linda Poppe is part of Survival's campaign to decolonise conservation.</p>
@@ -84,6 +84,11 @@
         <div class="mt-5 mb-5">
             <p class="name" id="BramBüscher">Bram Büscher</p>
             <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com.">www.brambuscher.com.</a></p>
+        </div>
+        <div class="mt-5 mb-5">
+          <p class="name" id="Benjamin">Benjamin Schuetze</p>
+          <p>Benjamin Schuetze is Senior Researcher at the Arnold Bergstraesser Institute (ABI) in Freiburg and a member in the Young Academy for Sustainability Research at the Freiburg Institute for Advanced Studies (FRIAS). His research focuses on the political economy of renewable energies and the politics of intervention in the MENA. He is the author of ‘Promoting Democracy, Reinforcing Authoritarianism: US and European Policy in Jordan’ (Cambridge University Press, 2019). He has recently been admitted to the DFG Emmy Noether-Programme and is currently establishing a junior research group on ‘Renewable Energies, Renewed Authoritarianisms? The Political Economy of Solar Energy in the MENA’.
+          <br><a href="https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C">https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C</a></p>
         </div>
     </div>
     <!-- Footer -->
