add Ian and Biruk

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/16-von-boemcken/" target="_blank">Dr. Marc von Boemcken</a>, BICC</i> <br>
                 <br>
                 <b>Breakout Group 2: National Projects and Local Contestations</b>
-                <br>Chair: <i>Biruk Terrefe, BICC/ University of Oxford</i>
+                <br>Chair: <i><a href="speakers.html#Biruk" target="_blank">Biruk Terrefe</a>, BICC/ University of Oxford</i>
                 <br>Inputs: 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Kennedy" target="_blank">Dr Kennedy Mkutu</a>, United States International University, Nairobi:</i>Organized Violence in the Lamu Port-South Sudan-Transport Corridor (LAPSSET)
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Lesutis" target="_blank">Dr Gediminas Lesutis</a>, University of Amsterdam (t.b.c.):</i> Dynamics of Exclusion and Inclusion in Anticipation of Port Infrastructures in Lamu, Kenya 
@@ -106,7 +106,7 @@
                 <b>Breakout group 2: Dams-The Violence Inherent in Disasters</b> 
                 <br>Chair: <i>Professor Dr Detlef Müller-Mahn, University of Bonn (t.b.c.)</i> 
                 <br>Inputs: 
-                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i>Professor Dr Ian Baird, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
+                <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Ian" target="_blank">Professor Dr Ian Baird</a>, University of Wisconsin-Madison: </i>Catastrophic and Slow Violence of a Hydropower Dam in Laos 
                 <br>\&nbsp;&nbsp;&nbsp;&nbsp;<i><a href="speakers.html#Bruno" target="_blank">Professor Dr Bruno Milanez</a>, Federal University of Juiz de Fora, Brazil:</i> The (Il)legal Contours of a Tailings Dam Disaster, Brazil  
                 <br>Rapporteur: <i><a href="https://www.bicc.de/de/about/staff/staffmember/member/723-kemmerling/" target="_blank">Birgit Kemmerling</a>, BICC</i> <br>
                 <br>
