--- a/speakers.html
+++ b/speakers.html
@@ -82,6 +82,15 @@
             <p>Pascal Abb is a senior researcher in PRIF's Research Department on Intrastate Conflict, focusing on how a rising China interacts with global conflict environments. He is currently conducting a research project on the impact of the Belt and Road Initiative on fragile and conflict-affected states. His recent publications on the subject include “All geopolitics is local: the China-Pakistan Economic Corridor amidst overlapping center-periphery relations” (forthcoming in Third World Quarterly), and <a href="https://www.hsfk.de/en/publications/publication-search/publication/road-to-peace-or-bone-of-contention">“Road to Peace or Bone of Contention? The Impact of the Belt and Road Initiative on Conflict States”</a> (with Robert Swaine and Ilya Jones, PRIF Report 1/2021). </p>
         </div>
         <div class="mt-5 mb-5">
+          <p class="name" id="Biruk">Biruk Terrefe</p>
+          <a href="https://www.qeh.ox.ac.uk/people/biruk-terrefe">Biruk Terrefe</a> is a DPhil Candidate at St Antony’s College in Oxford. 
+        </div>
+        <div>
+          <p class="name" id="Ian">Ian Baird</p>
+          <p>Professor, Department of Geography, University of Wisconsin-Madison.</p>
+          <a href="https://scholar.google.com/citations?user=OTFOaTQAAAAJ">See all articles</a>
+        </div>
+        <div class="mt-5 mb-5">
             <p class="name" id="BramBüscher">Bram Büscher</p>
             <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com.">www.brambuscher.com.</a></p>
         </div>
