--- a/speakers.html
+++ b/speakers.html
@@ -39,8 +39,8 @@
                 <li>Associate Professor at the Department of Industrial and Mechanical Engineering and the Graduate Programme in Geography at the Federal University of Juiz de Fora (Brazil). He coordinates the Politics, Economy, Mining, Environment, and Society Research Group (PoEMAS). His research interests include corporate strategies, mining legislation, and the relationship between mining corporations and the government.  
                     <br>Selected recent publications: 
                     <ul>
-                        <li>Milanez, B., Ali, S. H., & de Oliveira, J. A. P. (2021). Mapping industrial disaster recovery: lessons from mining dam failures in Brazil. <a href="https://www.sciencedirect.com/science/article/abs/pii/S2214790X21000459?casa_token=nMz7u69VsuYAAAAA:zPglHrTaXpXkxaStANPZqUI8a6zYmxIzA2LcVoO-jdL9iPqemRtXARvxNpHpnxV7k7j_hA4VO8a-">Extractive Industries and Society</a>, 8(2), 100900.</li>
-                        <li>Losekann, C., & Milanez, B. (2021). Mining disaster in the Doce River: Dilemma between governance and participation. <a href="https://journals.sagepub.com/doi/full/10.1177/00113921211059224?casa_token=_UBd6BWX-iUAAAAA%3AKrnIt3MccBaKe-2kwrPANjY9raA0QdyuERqPxvh9tfdbQgjgB3iTq3pjrQIkpji0sclix-iKImbd0KI">Current Sociology</a>, 00113921211059224.</li>
+                        <li>Milanez, B., Ali, S. H., & de Oliveira, J. A. P. (2021). Mapping industrial disaster recovery: lessons from mining dam failures in Brazil. <a href="https://www.sciencedirect.com/science/article/abs/pii/S2214790X21000459?casa_token=nMz7u69VsuYAAAAA:zPglHrTaXpXkxaStANPZqUI8a6zYmxIzA2LcVoO-jdL9iPqemRtXARvxNpHpnxV7k7j_hA4VO8a-" target="_blank">Extractive Industries and Society</a>, 8(2), 100900.</li>
+                        <li>Losekann, C., & Milanez, B. (2021). Mining disaster in the Doce River: Dilemma between governance and participation. <a href="https://journals.sagepub.com/doi/full/10.1177/00113921211059224?casa_token=_UBd6BWX-iUAAAAA%3AKrnIt3MccBaKe-2kwrPANjY9raA0QdyuERqPxvh9tfdbQgjgB3iTq3pjrQIkpji0sclix-iKImbd0KI" target="_blank">Current Sociology</a>, 00113921211059224.</li>
                     </ul>
                 </li>
             </ul>
@@ -64,7 +64,7 @@
         <div class="mt-5 mb-5">
           <p class="name" id="Lesutis">Gediminas Lesutis</p>
           <ul class="list-unstyled">
-              <li>Gediminas Lesutis is a Marie Curie Fellow in the Department of Human Geography, Planning and International Development, at the University of Amsterdam, the Netherlands. Website: <a href="www.gediminaslesutis.com">www.gediminaslesutis.com</a>. His research is at the intersection of global politics, human geography, and critical theory, with a specific focus on politics of infrastructure, precarity, extractivism, and contemporary capitalist development across South and East Africa. His first monograph, The Politics of Precarity: Spaces of Extractivism, Violence, and Suffering, was published in 2022 with Routledge Interventions.  
+              <li>Gediminas Lesutis is a Marie Curie Fellow in the Department of Human Geography, Planning and International Development, at the University of Amsterdam, the Netherlands. Website: <a href="www.gediminaslesutis.com" target="_blank">www.gediminaslesutis.com</a>. His research is at the intersection of global politics, human geography, and critical theory, with a specific focus on politics of infrastructure, precarity, extractivism, and contemporary capitalist development across South and East Africa. His first monograph, The Politics of Precarity: Spaces of Extractivism, Violence, and Suffering, was published in 2022 with Routledge Interventions.  
                   <br>Selected recent publications:  
                   <ul>
                     <li>Lesutis, G. 2022. Disquieting ambivalence of mega-infrastructures: Kenya’s Standard Gauge Railway as spectacle and ruination. Environment and Planning D: Society and Space, Accepted. https://doi.org/10.1177/02637758221125475</li>
@@ -79,7 +79,7 @@
         </div>
         <div class="mt-5 mb-5">
             <p class="name" id="Pascal">Pascal Abb</p>
-            <p>Pascal Abb is a senior researcher in PRIF's Research Department on Intrastate Conflict, focusing on how a rising China interacts with global conflict environments. He is currently conducting a research project on the impact of the Belt and Road Initiative on fragile and conflict-affected states. His recent publications on the subject include “All geopolitics is local: the China-Pakistan Economic Corridor amidst overlapping center-periphery relations” (forthcoming in Third World Quarterly), and <a href="https://www.hsfk.de/en/publications/publication-search/publication/road-to-peace-or-bone-of-contention">“Road to Peace or Bone of Contention? The Impact of the Belt and Road Initiative on Conflict States”</a> (with Robert Swaine and Ilya Jones, PRIF Report 1/2021). </p>
+            <p>Pascal Abb is a senior researcher in PRIF's Research Department on Intrastate Conflict, focusing on how a rising China interacts with global conflict environments. He is currently conducting a research project on the impact of the Belt and Road Initiative on fragile and conflict-affected states. His recent publications on the subject include “<a href="https://www.tandfonline.com/doi/full/10.1080/01436597.2022.2128329" target="_blank">All geopolitics is local: the China-Pakistan Economic Corridor amidst overlapping center-periphery relations</a>” (forthcoming in Third World Quarterly), and <a href="https://www.hsfk.de/en/publications/publication-search/publication/road-to-peace-or-bone-of-contention" target="_blank">“Road to Peace or Bone of Contention? The Impact of the Belt and Road Initiative on Conflict States”</a> (with Robert Swaine and Ilya Jones, PRIF Report 1/2021). </p>
         </div>
         <div class="mt-5 mb-5">
           <p class="name" id="Biruk">Biruk Terrefe</p>
@@ -92,22 +92,22 @@
         </div>
         <div class="mt-5 mb-5">
             <p class="name" id="BramBüscher">Bram Büscher</p>
-            <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com.">www.brambuscher.com.</a></p>
+            <p>Bram Büscher is Professor and Chair of the Sociology of Development and Change group at Wageningen University and visiting professor at the University of Johannesburg. Bram has published widely on the relations between nature, biodiversity, (capitalist) development and political-economy and is the author of ‘The Truth About Nature. Environmentalism in the Era of Post-Truth Politics and Platform Capitalism (University of California Press, 2021) and co-author, together with Robert Fletcher, of ‘The Conservation Revolution: Radical Ideas for Saving Nature Beyond the Anthropocene’ (Verso, 2020). Bram is one of the senior editors of Conservation & Society. For more information, and access to publications, see: <a href="www.brambuscher.com." target="_blank">www.brambuscher.com.</a></p>
         </div>
         <div class="mt-5 mb-5">
           <p class="name" id="Benjamin">Benjamin Schuetze</p>
           <p>Benjamin Schuetze is Senior Researcher at the Arnold Bergstraesser Institute (ABI) in Freiburg and a member in the Young Academy for Sustainability Research at the Freiburg Institute for Advanced Studies (FRIAS). His research focuses on the political economy of renewable energies and the politics of intervention in the MENA. He is the author of ‘Promoting Democracy, Reinforcing Authoritarianism: US and European Policy in Jordan’ (Cambridge University Press, 2019). He has recently been admitted to the DFG Emmy Noether-Programme and is currently establishing a junior research group on ‘Renewable Energies, Renewed Authoritarianisms? The Political Economy of Solar Energy in the MENA’.
-          <br><a href="https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C">https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C</a></p>
+          <br><a href="https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C" target="_blank">https://www.cambridge.org/core/books/promoting-democracy-reinforcing-authoritarianism/39B35DCAD9D8F7B39A899F4A0CE99F5C</a></p>
         </div>
     </div>
     <!-- Footer -->
     <div class="d-grid gap-2" id="footer">
         <div class="p-2"> Link to the 
-          <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yqoEfWS85k27dU5LZDMNPlqXdzsHaZBGoxOV7BFf3IlUN1FZQ01BRkwxQU40R0M0TlYwWlU2S080MSQlQCN0PWcu" class="btn" id="button" role="button">Registration Form</a> 
+          <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=yqoEfWS85k27dU5LZDMNPlqXdzsHaZBGoxOV7BFf3IlUN1FZQ01BRkwxQU40R0M0TlYwWlU2S080MSQlQCN0PWcu" target="blank_" class="btn" id="button" role="button">Registration Form</a> 
           or scan this <span style="color:#E54919;">QR Code</span>&nbsp;&nbsp;<img id="QR-Code"src="QRCodeConference2022.png" class="rounded mx-auto" alt="QRCode"> 
         </div>
         <div class="p-2"> Please do not hesitate to contact the conference team at
-          <a href="mailto:conference2022@bicc.de">conference2022@bicc.de</a>
+          <a href="mailto:conference2022@bicc.de" target="_blank">conference2022@bicc.de</a>
           should you have any questions. 
         </div>
         <div class="p-0"> <sub>By registering&nbsp;for the conference,&nbsp;you agree that your email&nbsp;address will be used for conference registration in Zoom and our mailing system. 
