--- a/speakers.html
+++ b/speakers.html
@@ -83,12 +83,12 @@
         </div>
         <div class="mt-5 mb-5">
           <p class="name" id="Biruk">Biruk Terrefe</p>
-          <a href="https://www.qeh.ox.ac.uk/people/biruk-terrefe">Biruk Terrefe</a> is a DPhil Candidate at St Antony’s College in Oxford. 
+          <a href="https://www.qeh.ox.ac.uk/people/biruk-terrefe" target="_blank">Biruk Terrefe</a> is a DPhil Candidate at St Antony’s College in Oxford. 
         </div>
         <div>
           <p class="name" id="Ian">Ian Baird</p>
           <p>Professor, Department of Geography, University of Wisconsin-Madison.</p>
-          <a href="https://scholar.google.com/citations?user=OTFOaTQAAAAJ">See all articles</a>
+          <a href="https://scholar.google.com/citations?user=OTFOaTQAAAAJ" target="_blank">See all articles</a>
         </div>
         <div class="mt-5 mb-5">
             <p class="name" id="BramBüscher">Bram Büscher</p>
